pkg_precios/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>PrecioMinimoAsesor__c</fullName>
        <label>Precio Mínimo Asesor</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>PrecioExonerado__c</fullName>
        <label>Precio Exonerado</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>PrecioExoneradoMinimo__c</fullName>
        <label>Precio Exonerado Mínimo</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Gastos__c</fullName>
        <label>Gastos</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>MontoCashback__c</fullName>
        <label>Monto Cashback</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>AplicaCashback__c</fullName>
        <label>Aplica Cashback</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>VigenciaDesde__c</fullName>
        <label>Vigencia Desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solicitud__c</fullName>
        <label>Solicitud</label>
        <type>Lookup</type>
        <referenceTo>Solicitud_Cambio_Precios__c</referenceTo>
        <relationshipLabel>Pricebook Entries</relationshipLabel>
        <relationshipName>PricebookEntries</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
    </fields>
</CustomObject>